<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".HomeScreenFragment">


            <Button
                android:id="@+id/btn_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/now_playing"
                app:layout_constraintEnd_toEndOf="@+id/tv_now_playing_description"
                app:layout_constraintStart_toStartOf="@+id/tv_now_playing_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_now_playing_description" />

            <Button
                android:id="@+id/btn_theaters_near"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/theaters_near_me"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_theater_near_me_description"
                app:layout_constraintStart_toStartOf="@+id/tv_theater_near_me_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_theater_near_me_description" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/tv_cd_movie_film_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_local_movies_black_24dp" />

            <TextView
                android:id="@+id/tv_now_playing_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/check_out_movies_now_playing_in_theaters"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_theater_near_me_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/find_a_movie_theater_in_your_area"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="@+id/btn_now_playing"
                app:layout_constraintStart_toStartOf="@+id/btn_now_playing"
                app:layout_constraintTop_toBottomOf="@+id/btn_now_playing" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>