<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_my_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_use_my_location"
            app:layout_constraintEnd_toEndOf="@+id/tv_or"
            app:layout_constraintStart_toStartOf="@+id/tv_or"
            app:layout_constraintTop_toBottomOf="@+id/tv_or" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_theater_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_my_location"
            tools:listitem="@layout/list_item_theater_result" />

        <EditText
            android:id="@+id/et_zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/text_help_zip_code"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_search_for_theaters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/text_zip_search"
            app:layout_constraintBottom_toBottomOf="@+id/et_zip_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/et_zip_code"
            app:layout_constraintTop_toTopOf="@+id/et_zip_code" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_or_seperator"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn_search_for_theaters"
            app:layout_constraintStart_toStartOf="@+id/et_zip_code"
            app:layout_constraintTop_toBottomOf="@+id/et_zip_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>