<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_now_playing_list"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/tv_now_playing"
                app:layout_constraintTop_toBottomOf="@+id/tv_now_playing"
                tools:itemCount="20"
                tools:listitem="@layout/list_item_poster" />

            <TextView
                android:id="@+id/tv_now_playing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/now_playing"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_want_to_watch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/want_to_watch"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rv_now_playing_list"
                app:layout_constraintTop_toBottomOf="@+id/rv_now_playing_list"
                tools:text="@string/text_cd_want_to_watch" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_want_to_watch"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_want_to_watch"
                app:layout_constraintTop_toBottomOf="@+id/tv_want_to_watch"
                tools:itemCount="20"
                tools:listitem="@layout/list_item_poster" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
