<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="movie"
            type="com.example.moviefinder.database.model.Movie" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@string/text_cd_movie_backdrop"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/tool_backdrop" />

            <ImageView
                android:id="@+id/iv_poster_thumb"
                android:layout_width="185dp"
                android:layout_height="200dp"
                android:layout_marginTop="150dp"
                android:contentDescription="@string/text_cd_poster_thumnail"
                app:layout_constraintStart_toStartOf="@+id/iv_backdrop"
                app:layout_constraintTop_toTopOf="@+id/iv_backdrop"
                tools:srcCompat="@drawable/tool_poster_thumb" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@{movie.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/iv_poster_thumb"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster_thumb"
                tools:text="Movie Title" />

            <TextView
                android:id="@+id/tv_movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{movie.releaseDate}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                tools:text="Release Date" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@{movie.overview}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_release_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_date"
                tools:text="Move Overview" />

            <CheckBox
                android:id="@+id/cb_want_to_watch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cd_want_to_watch"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster_thumb"
                app:layout_constraintStart_toEndOf="@+id/iv_poster_thumb" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>